# customtypes

./: Cargo.toml
src/: combo.rs  countryenum.rs  httpmsgid.rs  httpresponsefind.rs  langenum.rs  lib.rs  name.rs  password.rs  responsecount.rs  responsefind.rs  responsemsg.rs  token.rs
