[package]
name = "customtypes"
version = "0.9.1"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version="3.3.2", features=["rust-tls"], optional = true }
anyhow = "1.0"
arraystring = { version = "0.3.0", features = ["diesel-traits", "serde-traits"] }
validator = "0.10.1"
validator_derive = "0.10.1"
diesel = { version = "1.4.5", optional = true, features = ["postgres"] }
strum = "0.20.0"
strum_macros = "0.20.0"

[features]
enableactix = ["actix-web"]
enablediesel = ["diesel"]