[package]
name = "customtypes"
version = "0.17.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = { version = "4", optional = true }
actix-web-validator = { version = "3", optional = true }
anyhow = "1.0"
arraystring = { version = "0.3.0", features = [
    "diesel-traits",
    "serde-traits",
] }
validator = { version = "0.14.0", features = ["derive"] }
diesel = { version = "1.4.6", optional = true, features = ["postgres"] }
strum = "0.25.0"
strum_macros = "0.25.2"
calamine = { version = "0.21.2", optional = true }

[features]
enableactix = ["actix-web", "actix-web-validator"]
enablediesel = ["diesel"]
enablecalamine = ["calamine"]
